Emily added notes

--- a/aip.tex
+++ b/aip.tex
@@ -733,6 +733,8 @@ from which it follows that $B \vv{h} < B \tail{\vv{s}}_q$.  To see that $\vv{h}$
 
 The following may be regarded as a partial converse to \Cref{easy but important: L}
 
+\emily[inline]{Restate as a lemma first.  Do this point-by-point, and appeal to the finiteness of the $\mathbb{O}$.}
+
 \begin{proposition}
 \label{uniform value: P}
 Given a monomial matrix $A$, there exists an integer $\beta$ satisfying the following condition:  If $(A, \vv{u})$ is a pair and $\vv{s} \in \mc_{\QQ}(A, \vv{u})$ is a point with denominator $D$, then every point in
@@ -814,6 +816,8 @@ We now establish the opposite containment:  \Cref{uniform value: P} tells us tha
 \label{useful-invariants: ss}
 
 In this subsection, we study the quantities appearing in \Cref{uniform value and image: C} above.  We begin with a fundamental observation.
+
+\emily[inline]{Can we give a direct proof that $\delta$ does not depend on $\vv{s}$?}
 
 \begin{corollary}  
 \label{independence: C} Fix a pair $(A, \vv{u})$ and an integer $q>0$.  If $B$ is the collapse of $A$ along $\O = \mf(A, \vv{u})$, then the quantities
