--- a/preamble.tex
+++ b/preamble.tex
@@ -12,6 +12,7 @@
 \usepackage{color}
 \usepackage{mathrsfs}
 \usepackage[mathcal]{euscript}
+\usepackage{mathtools}
 
 %clever ref package 
 %must come before following 3 sections
