--- a/preamble.tex
+++ b/preamble.tex
@@ -107,6 +107,9 @@
 \renewcommand{\O}{\mathcal{O}}
 \newcommand{\Z}{\mathcal{Z}}
 
+\newcommand{\diag}{\operatorname{diag}}
+\newcommand{\crit}{\operatorname{crit}}
+
 %sets
 \newcommand{\kk}{\Bbbk}
 \newcommand{\LL}{\mathbb{L}}
