--- a/aip.tex
+++ b/aip.tex
@@ -1683,10 +1683,17 @@ Since $\vv{h} \in \orep(A)$, $A\vv{h} \in A(\orep(A))$, so by our choice of $p$,
 
 We could restate in terms of programs:
 \begin{lemma}
-There exists $\beta = \beta(A)$ such that for all $q > \beta$ and $\vv{z} \in \Delta(A, \vv{u}, q)$, there exists $\vv{k} \in \operatorname{feas} \Pi(A, \vv{u}, q)$ with $\norm{\vv{k}} = \ft{A}{\vv{u}} q - \delta(A, \vv{u}, q)$ for which $\overline{A \vv{k}} = \overline{\vv{u}} q - \vv{z}$
+There exists $\beta = \beta(A)$ such that for all $q > \beta$ and $\vv{z} \in \Delta(A, \vv{u}, q)$, there exists $\vv{k} \in \operatorname{feas} \Pi(A, \vv{u}, q)$ with $\norm{\vv{k}} = \ft{A}{\vv{u}} q - \delta(A, \vv{u}, q)$ for which $\overline{A \vv{k}} = \overline{\vv{u}} q - \vv{z}$. 
 \end{lemma}
 
 Notice that these statements are very similar to \Cref{uniform value: P}. 
+
+\begin{corollary}
+For $p \gg 0$, 
+ $\nu(A, \vv{u}, q) = \nu(\overline{A}, \overline{\vv{u}}, q)$. 
+\end{corollary}
+
+
 }
 
 
